--- a/css/index.css
+++ b/css/index.css
@@ -182,3 +182,29 @@ header .header-bottom button {
   padding: 0.8%;
   font-size: 1.3rem;
 }
+.top-content {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+.top-content .box-1 {
+  width: 50%;
+}
+.top-content .box-1 h2 {
+  font-size: 2.2rem;
+  margin: 15px 0;
+}
+.top-content .box-1 p {
+  line-height: 1.4;
+}
+.top-content .box-2 {
+  width: 40%;
+}
+.top-content .box-2 h2 {
+  font-size: 1.5rem;
+  margin: 15px 0;
+}
+.top-content .box-2 p {
+  border: 1px solid whitesmoke;
+  padding: 5%;
+}
