--- a/less/index.less
+++ b/less/index.less
@@ -124,5 +124,29 @@ header{
 }//this ends header
 
 .top-content{
-	
+	display: flex;
+	justify-content: space-between;
+	.header-margins();
+	.box-1{
+		width: 50%;
+		h2{
+			font-size: 2.2rem;
+			.header-margins();
+		}
+		p{
+			line-height: 1.4;
+		}
+	}//this ends .box-1
+
+	.box-2{
+		width: 40%;
+		h2{
+			font-size: 1.5rem;
+			.header-margins();
+		}
+		p{
+			border: 1px solid @lightgraycolor;
+			padding: 5%;
+		}
+	}
 }
