--- a/css/index.css
+++ b/css/index.css
@@ -210,19 +210,33 @@ header .header-bottom button {
 }
 .bottom-content h2 {
   font-size: 1.5rem;
+  margin: 15px 0;
 }
 .bottom-content .experience-chart {
   display: flex;
-  justify-content: space-between;
+  margin: 15px 0;
+}
+.bottom-content .experience-chart div {
+  width: 100%;
 }
 .bottom-content h3 {
   font-weight: bold;
   display: flex;
   flex-direction: column;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 2%;
+  border-top: 0.5px solid darkgray;
 }
 .bottom-content .column-1 {
   font-weight: bold;
 }
 .bottom-content .grey-bkg {
   background-color: whitesmoke;
+}
+.bottom-content p {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 2%;
+  border-top: 0.5px solid darkgray;
 }
