--- a/less/index.less
+++ b/less/index.less
@@ -161,7 +161,7 @@ header{
 }// this ends .top-content
 
 .bottom-content{
-	
+	margin-bottom: 3.5%;
 	h2{
 		font-size: 1.5rem;
 		.header-margins();
@@ -192,5 +192,9 @@ header{
 }//this ends .bottom-content
 
 footer{
-	
+	color: white;
+	background-color: @darkgraycolor;
+	display: flex;
+	justify-content: center;
+	padding: 2% 0 4%;
 }
