--- a/less/index.less
+++ b/less/index.less
@@ -63,6 +63,9 @@ html, body {
 	width: 60%;
 	margin: 0 auto;
 	font-family: 'Lato', sans-serif;
+	@media (max-width: 500px){
+		width: 95%;
+	}
 }
 /*************** VARIABLES AND MIX-INS ************************/
 //Variables
@@ -96,6 +99,13 @@ nav{
 		text-decoration: none;
 		color: black;
 		margin: 12px 2%;
+	}
+	@media (max-width: 500px){
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		}
 	}
 }
 
@@ -157,7 +167,16 @@ header{
 			border: 1px solid @lightgraycolor;
 			padding: 5%;
 		}
-	}// this ends .dox-2
+	}// this ends .box-2
+	@media (max-width: 500px){
+		flex-direction: column;
+		.box-1{ 
+			width: 100%;
+		}
+		.box-2{
+			width: 100%
+		}
+	}//this ends @media
 }// this ends .top-content
 
 .bottom-content{
@@ -188,6 +207,9 @@ header{
 	}
 	p{
 		.chart-border-margins();
+		@media (max-width: 500px){
+			font-size: .8rem;
+		}
 	}
 }//this ends .bottom-content
 
