--- a/less/index.less
+++ b/less/index.less
@@ -72,15 +72,14 @@ html, body {
 
 @lightgraycolor: whitesmoke;
 @darkgraycolor: darkgray;
+@boldfont: bold;
 
 // Mix-ins
 
 .header-margins(){
 	margin:15px 0;
 }
-.bold-font(){
-	font-weight: bold;
-}
+
 .chart-border-margins(){
 	padding-top: 5%;
 	padding-bottom: 5%;
@@ -193,13 +192,13 @@ header{
 		}
 	}
 	h3{
-		.bold-font();
+		font-weight: @boldfont;
 		display: flex;
 		flex-direction: column;
 		.chart-border-margins();
 	}
 	.column-1{
-		.bold-font();
+		font-weight: @boldfont;
 	}
 	.grey-bkg{
 		background-color: @lightgraycolor;
